infra/k8s/backend/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backstage-backend
  namespace: backstage
  labels:
    app: backstage-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backstage-backend
  template:
    metadata:
      labels:
        app: backstage-backend
    spec:
      serviceAccountName: backstage
      imagePullSecrets:
        - name: docker
      containers:
        - name: backstage-backend
          image: europe-west3-docker.pkg.dev/hd-backstage-poc-28107/backstage-96b1cd00/backstage/backend:latest
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 7007
            initialDelaySeconds: 60
            periodSeconds: 15
            failureThreshold: 5
            timeoutSeconds: 15
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 7007
            initialDelaySeconds: 60
            periodSeconds: 15
            failureThreshold: 5
            timeoutSeconds: 15
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
          ports:
            - name: http
              containerPort: 7007
