infra/k8s/backend/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backstage-backend-service
  namespace: backstage
  labels:
    application: backstage
    component: backstage-backend
    environment: poc
    team: breu
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: NodePort
  selector:
    application: backstage
    component: backstage-backend
    environment: poc
    team: breu
  ports:
    - port: 7007
      targetPort: 7007
