infra/k8s/backend/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: backstage
spec:
  type: NodePort
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 7007
      targetPort: 7007
